fix modal scrolling on iOS Safari
fix from https://github.com/twbs/bootstrap/issues/14839

--- a/site/css/site.css
+++ b/site/css/site.css
@@ -54,6 +54,8 @@ html, body {
 
 .modal-dialog {
   max-width: 600px;
+  -webkit-overflow-scrolling: auto !important;
+  overflow-y: auto !important;
 }
 
 .modal-dialog {
